logs/Slang/generated/hdlconv/hdlconvertor_p160_1.sv.log
name: hdlconvertor_p160_1
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p160_1.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p160_1.sv:1:1: error: language feature not yet supported
interface class PutImp#(type PUT_T = logic);
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p160_1.sv:5:1: error: language feature not yet supported
interface class GetImp#(type GET_T = logic);
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p160_1.sv:9:1: error: language feature not yet supported
class MyQueue #(type T = logic, int DEPTH = 1);
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p160_1.sv:16:1: error: language feature not yet supported
class Fifo #(type T = logic, int DEPTH = 1) extends MyQueue#(T, DEPTH)
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
